--- a/Roadmap.org
+++ b/Roadmap.org
@@ -1,19 +1,6 @@
 * Roadmap
-
-** DONE Remove custom redux implementation
-CLOSED: [2016-02-14 Sun 17:31]
-
-Enough playing. Working rxjs POC is in place, it's time we move the codebase to redux library. The less code (we have to maintain) the better.
-
-** DONE Add redux-devtools
-CLOSED: [2016-02-14 Sun 17:51]
-Added via chrome extension
-
-** TODO Add TypeScript
-
-Port all code to Typescript
-
-** TODO Remove Browsersync
-
-- [ ] Remove browsersync dependency. Use simple express server with babel-hmr
-- [ ] Add hmr snipper required to hot-push redux reducers
+** TODO MVP
+- [ ] Keep markdown version of entry in state
+- [ ] Update html version of entry in Editor component
+- [ ] Setup client-side storage of entries
+- [ ] Setup loading locally stored entries on startup
