Remove Dropbox support from this version
From the feedback I got about the app, it appear the whole react + redux
+ rx setup is somewhat overwhelming to someone new to redux (most
testers were aquainted with React). So I have decided to not include
Dropbox (hence its own set of complexities) and keep the app simple. May
be we can add offline support, but that is trivial, and I am leaving it
to be done at end of tutorial branch.

We're done here folks. Over to the tutorial branch!

--- a/specs.org
+++ b/specs.org
@@ -2,7 +2,7 @@
 
 * Overview
 
-App to help users write down their thoughts as a journal, and allow tagging entries for easy future retrieval. Provides storage of the journal to Dropbox.
+App to help users write down their thoughts as a journal, and allow tagging entries for easy future retrieval.
 
 ** Objective
 
@@ -26,11 +26,11 @@ This app will be/was built as a workshop project, so an effort is made to not us
 - Add / edit / remove tags on diary entries
 - Read diary entries by date
 - Read diary entries by tag
-- Sync diary entries with Dropbox
 
 ** Features NOT to implement
 
 - Offline storage
+- Sync diary entries with Dropbox
 - Encryption (encrypting entries before storing them in Dropbox)
 - Tags for individual (user-selectable) sentences in diary entry
 - Select multiple tags when browsing entries by tag
@@ -43,7 +43,6 @@ This app will be/was built as a workshop project, so an effort is made to not us
 - User can add/remove tags to an entry on "Edit Entry" view
 - User can click on visible date in "Edit Entry" view to change to entry for another date
 - User can click on "Browse" option in sidebar to browse all entries by tag; i.e user changes to "Browse Entries" view
-- User can click on "Connect with Dropbox" option in sidebar to connect the app with Dropbox. Once connected, every edit will be saved to Dropbox
 ** Models
 *** Entry
 - date :: moment
@@ -61,9 +60,6 @@ App has a single layout called "Main". All the views are rendered in the Main la
 
   * Browse Entries
     Opens "Browse Entries" view
-
-  * Connect with Dropbox
-    Redirects to Dropbox for generating access token. Access token is then stored locally and all changes are synced to Dropbox.
 
 - A content section which covers rest of the area. Content section changes per view.
 ** Views
